test/simple/typeerrors/Examples/ExprIfElse.hs
module ExprIfElse where

f = if True then 52 else "olifant met een lange slurf"
